--- a/alter.css
+++ b/alter.css
@@ -3,7 +3,9 @@
     width: 500% !important;
     height: 500% !important;
 }*/
-
+#user-lists .list.staff .group {
+    background: linear-gradient(to right,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 1) 100%) !important;
+}
 #footer {
     background: linear-gradient(to bottom,rgba(0, 0, 0, 0.25) 0,rgba(0, 0, 0, 0.75) 100%);
 }
@@ -30,7 +32,9 @@
 }
 #settings {
     background: rgba(10, 10, 10, 0.89) !important;
-
+}
+#user-lists .list .user:hover {
+    background: linear-gradient(to right,rgba(255, 118, 118, 0) 0,rgba(255, 0, 194, 0.27) 100%) !important;
 }
 #waitlist .list .user {
     background: linear-gradient(to right,rgba(255, 118, 118, 0) 0,rgba(255, 0, 194, 0.13) 100%) !important;
