--- a/alter.css
+++ b/alter.css
@@ -3,6 +3,11 @@
     width: 500% !important;
     height: 500% !important;
 }*/
+
+#user-lists .list .user .name {
+    color: null;
+}
+
 #user-lists .list.staff .group {
     background: linear-gradient(to right,rgba(0, 0, 0, 0) 0,rgba(0, 0, 0, 1) 100%) !important;
 }
