--- a/badges.css
+++ b/badges.css
@@ -11,14 +11,13 @@
 }
 
 [data-cid^="4453331-"] .badge-box .bdg {
-    background-image: url("https://i.imgur.com/rXviL4y.gif") !important;
+    background-image: url("http://i.imgur.com/bfZiJwL.gif") !important;
     background-repeat: round !important;
     background-size: 30px !important;
 }
 #user-rollover.id-4453331 .badge-box .bdg {
     border-radius: 5px !important;
-    background-image: url("https://i.imgur.com/rXviL4y.gif") !important;
+    background-image: url("http://i.imgur.com/bfZiJwL.gif") !important;
     background-repeat: round !important;
     background-size: 30px !important;
 }
-
