--- a/badges.css
+++ b/badges.css
@@ -40,6 +40,11 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(http://i.imgur.com/WJpBhmr.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/WJpBhmr.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="3469337"] .badge-box .bdg {
+    background: url(https://imgur.com/lsPwhep.gif) center no-repeat!important;
     background-size: cover!important
 }
