--- a/badges.css
+++ b/badges.css
@@ -46,5 +46,5 @@
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
     background: url(https://imgur.com/lsPwhep.gif) center no-repeat!important;
-    background-size: cover!important
+    background-size: 70px !important
 }
