--- a/badges.css
+++ b/badges.css
@@ -53,3 +53,8 @@
     background: url(https://media.giphy.com/media/xUn3C6s83WTsC6sIkU/giphy.gif) center no-repeat!important;
     background-size: 70px !important
 }
+
+#chat-messages [data-cid|="3750654"] .badge-box .bdg {
+    background: url(https://i.imgur.com/pS0Z7Dn.gif) center no-repeat!important;
+    background-size: 70px !important
+}
