--- a/badges.css
+++ b/badges.css
@@ -56,5 +56,5 @@
 
 #chat-messages [data-cid|="3750654"] .badge-box .bdg {
     background: url(https://i.imgur.com/pS0Z7Dn.gif) center no-repeat!important;
-    background-size: 70px !important
+    background-size: cover !important
 }
