--- a/badges.css
+++ b/badges.css
@@ -51,7 +51,7 @@
 
 #chat-messages [data-cid|="24791065"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/xUn3C6s83WTsC6sIkU/giphy.gif) center no-repeat!important;
-    background-size: 70px !important
+    background-size: cover !important
 }
 
 #chat-messages [data-cid|="3750654"] .badge-box .bdg {
