--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(https://i.imgur.com/WJpBhmr.gif) center no-repeat!important;
+    background: url(http://www.imagensanimadas.com/data/media/742/bandeira-brasil-imagem-animada-0019.gif) center no-repeat!important;
     background-size: cover!important
 }
 
