--- a/badges.css
+++ b/badges.css
@@ -50,11 +50,16 @@
 }
 
 #chat-messages [data-cid|="24791065"] .badge-box .bdg {
-    background: url(https://media.giphy.com/media/xUn3C6s83WTsC6sIkU/giphy.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/3o84U7EsQ2BkyNXVUk/giphy.gif) center no-repeat!important;
     background-size: cover !important
 }
 
 #chat-messages [data-cid|="3750654"] .badge-box .bdg {
     background: url(https://i.imgur.com/pS0Z7Dn.gif) center no-repeat!important;
     background-size: cover !important
+}
+
+#chat-messages [data-cid|="16760700"] .badge-box .bdg {
+    background: url(http://www.pirateradioofthetreasurecoast.com/images/300_pirateflagan0.gif) center no-repeat!important;
+    background-size: cover!important
 }
