--- a/badges.css
+++ b/badges.css
@@ -45,8 +45,8 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://imgur.com/lsPwhep.gif) center no-repeat!important;
-    background-size: 70px !important
+    background: url(http://i.imgur.com/oWZLsMF.gif) center no-repeat!important;
+    background-size: cover !important
 }
 
 #chat-messages [data-cid|="24791065"] .badge-box .bdg {
@@ -60,6 +60,6 @@
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
-    background: url(http://www.pirateradioofthetreasurecoast.com/images/300_pirateflagan0.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/dTxOCCvQOhRXa/giphy.gif) center no-repeat!important;
     background-size: cover!important
 }
