--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(http://www.imagensanimadas.com/data/media/742/bandeira-brasil-imagem-animada-0009.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/14qb1Uhf40ndw4/giphy.gif) center no-repeat!important;
     background-size: cover!important
 }
 
