--- a/badges.css
+++ b/badges.css
@@ -4,7 +4,7 @@
 }
 
 #chat-messages [data-cid|="3485598"] .badge-box .bdg {
-    background: url(https://i.imgur.com/zYvoYnu.jpg)!important;
+    background: url(https://i.imgur.com/qH2zYy7.jpg)!important;
     background-size: cover!important
 }
 
