--- a/badges.css
+++ b/badges.css
@@ -80,6 +80,6 @@
 }
 
 #chat-messages [data-cid|="13167127"] .badge-box .bdg {
-    background: url(http://i.imgur.com/365QDgj.gif) center no-repeat!important;
+    background: url(http://i.imgur.com/No4KmD7.gif) center no-repeat!important;
     background-size: cover!important
 }
