--- a/badges.css
+++ b/badges.css
@@ -88,3 +88,8 @@
     background: url(https://i.imgur.com/dVthkoQ.gif) center no-repeat!important;
     background-size: cover!important
 }
+
+#chat-messages [data-cid|="25641923"] .badge-box .bdg {
+    background: url(http://i68.tinypic.com/sl5il3.gif) center no-repeat!important;
+    background-size: 80px!important
+}
