--- a/badges.css
+++ b/badges.css
@@ -4,7 +4,7 @@
 }
 
 #chat-messages [data-cid|="3485598"] .badge-box .bdg {
-    background: url(https://i.imgur.com/qH2zYy7.jpg)!important;
+    background: url(https://i.imgur.com/zYvoYnu.jpg)!important;
     background-size: cover!important
 }
 
@@ -35,7 +35,7 @@
 }
 
 #chat-messages [data-cid|="1071102"] .badge-box .bdg {
-    background: url(https://i.imgur.com/0U5b0zX.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/rYKhUfy.gif) center no-repeat!important;
     background-size: cover!important
 }
 
@@ -62,34 +62,4 @@
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/dTxOCCvQOhRXa/giphy.gif) center no-repeat!important;
     background-size: cover!important
-}
-
-#chat-messages [data-cid|="18200177"] .badge-box .bdg {
-    background: url(https://i.imgur.com/nEUaEL6.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
-#chat-messages [data-cid|="3851223"] .badge-box .bdg {
-    background: url(https://media.giphy.com/media/WwK3OHQrsAAI8/giphy.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
-#chat-messages [data-cid|="3456648"] .badge-box .bdg {
-    background: url(https://i.makeagif.com/media/10-29-2015/D9ndLC.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
-#chat-messages [data-cid|="13167127"] .badge-box .bdg {
-    background: url(http://i.imgur.com/No4KmD7.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
-#chat-messages [data-cid|="3985686"] .badge-box .bdg {
-    background: url(https://i.imgur.com/dVthkoQ.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
-#chat-messages [data-cid|="25641923"] .badge-box .bdg {
-    background: url(http://i68.tinypic.com/sl5il3.gif) center no-repeat!important;
-    background-size: 25px!important
 }
