--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(https://www.dropbox.com/sh/xy6j1t07qd97z2y/AABC3Ij9s1Idb0oaEaoDZpsTa/Dancing/tastycat.gif?dl=0) center no-repeat!important;
+    background: url(http://i.imgur.com/IFLqEk0.gif) center no-repeat!important;
     background-size: cover!important
 }
 
