--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(http://i.imgur.com/IFLqEk0.gif) center no-repeat!important;
+    background: url(http://i.imgur.com/qhpAOXi.gif) center no-repeat!important;
     background-size: cover!important
 }
 
