--- a/badges.css
+++ b/badges.css
@@ -83,3 +83,8 @@
     background: url(http://i.imgur.com/UDbI3m9.gif) center no-repeat!important;
     background-size: cover!important
 }
+
+#chat-messages [data-cid|="29110866"] .badge-box .bdg {
+    background: url(http://i.imgur.com/rvNLdth.gif) center no-repeat!important;
+    background-size: cover!important
+}
