--- a/badges.css
+++ b/badges.css
@@ -85,6 +85,6 @@
 }
 
 #chat-messages [data-cid|="29110866"] .badge-box .bdg {
-    background: url(http://i.imgur.com/rvNLdth.gif) center no-repeat!important;
+    background: url(http://i.imgur.com/V5Jcfak.gif) center no-repeat!important;
     background-size: cover!important
 }
