--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(http://i.imgur.com/djupCHy.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/4rRHEBeah0DeM/giphy.gif) center no-repeat!important;
     background-size: cover!important
 }
 
