--- a/badges.css
+++ b/badges.css
@@ -89,8 +89,9 @@
     background-size: cover!important
 }
 
-/* Disponível apenas para o PlugPlus */
-#user-rollover[data-id|="3485598"] .meta .thumb i{
+/* Rollover */
+#user-rollover[data-id|="3485598"] .meta .thumb i,
+#user-rollover.id-348559 .meta .thumb i {
     background: url(https://i.imgur.com/ubFOYYC.jpg) center no-repeat !important;
     background-size: 80% !important;
 }
