--- a/badges.css
+++ b/badges.css
@@ -1,5 +1,5 @@
 #chat-messages [data-cid|="16540847"]>.badge-box>.bdg {
-    background: url(http://blog.iconfinder.com/wp-content/uploads/2016/04/13-robots-icons.jpg) -8px -9px!important;
+    background: url(https://colerisetemp2.files.wordpress.com/2009/11/dock-icon.png) -8px -9px!important;
     background-size: 46px!important
 }
 
