--- a/badges.css
+++ b/badges.css
@@ -40,7 +40,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(https://i.imgur.com/ceGiH2M.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/qmN4Zvj.jpg) center no-repeat!important;
     background-size: 25px!important
 }
 
@@ -91,7 +91,7 @@
 
 #chat-messages [data-cid|="5367703"] .badge-box .bdg {
     background: url(https://image.prntscr.com/image/O8coone5T5_lWer-dcLHjA.jpg) center no-repeat!important;
-    background-size: cover!important       
+    background-size: 25px!important      
 }
 
 /* Rollover */
