--- a/badges.css
+++ b/badges.css
@@ -119,3 +119,29 @@
     position: relative;
     top: -3px;
 }
+
+/* Rollover */
+#user-rollover[data-id|="4453331"] .meta .thumb .avi,
+#user-rollover.id-445333 .meta .thumb i {
+    background: url(https://i.imgur.com/qmN4Zvj.jpg) center no-repeat !important;
+    background-size: 80% !important;
+}
+
+#user-rollover[data-id|="4453331"] .meta .username {
+    font-size: 1.4em !important;
+    font-weight: bold;
+    position: relative;
+}
+
+#user-rollover[data-id|="4453331"] .meta .username:after,
+#user-rollover.id-445333 .meta .username:after {
+    display: inline-block;
+    content: 'DEVELOPER';
+    font-size: 10px;
+    background: rgba(0, 0, 0, 0.54);
+    padding: 4px;
+    border-radius: 3px;
+    margin-left: 8px;
+    position: relative;
+    top: -3px;
+}
