--- a/badges.css
+++ b/badges.css
@@ -124,7 +124,7 @@
 #user-rollover[data-id|="4453331"] .meta .thumb .avi,
 #user-rollover.id-445333 .meta .thumb i {
     background: url(https://i.imgur.com/qmN4Zvj.jpg) center no-repeat !important;
-    background-size: 80% !important;
+    background-size: 20% !important;
 }
 
 #user-rollover[data-id|="4453331"] .meta .username {
@@ -136,7 +136,7 @@
 #user-rollover[data-id|="4453331"] .meta .username:after,
 #user-rollover.id-445333 .meta .username:after {
     display: inline-block;
-    content: 'DEVELOPER';
+    content: 'ANFITRIAO';
     font-size: 10px;
     background: rgba(0, 0, 0, 0.54);
     padding: 4px;
