--- a/badges.css
+++ b/badges.css
@@ -136,7 +136,7 @@
 #user-rollover[data-id|="4453331"] .meta .username:after,
 #user-rollover.id-445333 .meta .username:after {
     display: inline-block;
-    content: 'ANFITRIAO';
+    content: 'ADMIN GERAL';
     font-size: 10px;
     background: rgba(0, 0, 0, 0.54);
     padding: 4px;
