--- a/badges.css
+++ b/badges.css
@@ -60,7 +60,7 @@
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
-    background: url(https://media.giphy.com/media/dTxOCCvQOhRXa/giphy.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/KSKhTui.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
