--- a/badges.css
+++ b/badges.css
@@ -133,7 +133,7 @@
 /* Rollover */
 #user-rollover[data-id|="4453331"] .meta .thumb .avi,
 #user-rollover.id-445333 .meta .thumb i {
-    background: url(https://i.imgur.com/qmN4Zvj.jpg) center no-repeat !important;
+    background: url(https://i.imgur.com/Sr3cbEN.jpg) center no-repeat !important;
     background-size: 57% !important;
 }
 
