--- a/badges.css
+++ b/badges.css
@@ -45,7 +45,7 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(https://i.imgur.com/qmN4Zvj.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/Sr3cbEN.jpg) center no-repeat!important;
     background-size: 25px!important
 }
 
