--- a/badges.css
+++ b/badges.css
@@ -91,7 +91,7 @@
 
 #chat-messages [data-cid|="29110866"] .badge-box .bdg {
     background: url(https://thumbs.gfycat.com/FrightenedShoddyAmurminnow-max-1mb.gif) center no-repeat!important;
-    background-size: 25px!important
+    background-size: cover!important
  }
 
 #chat-messages [data-cid|="5367703"] .badge-box .bdg {
