--- a/badges.css
+++ b/badges.css
@@ -45,8 +45,8 @@
 }
 
 #chat-messages [data-cid|="4453331"] .badge-box .bdg {
-    background: url(https://i.imgur.com/Sr3cbEN.jpg) center no-repeat!important;
-    background-size: 25px!important
+    background: url(https://thumbs.gfycat.com/HarmlessShadowyCuscus-max-1mb.gif) center no-repeat!important;
+    background-size: cover!important
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
