--- a/badges.css
+++ b/badges.css
@@ -100,7 +100,7 @@
 }
 
 #chat-messages [data-cid|="23174137"] .badge-box .bdg {
-    background: url(https://orig00.deviantart.net/3946/f/2016/092/9/6/ba01_by_rosolinio-d9xfjoy.gif) center no-repeat!important;
+    background: url(https://pa1.narvii.com/6398/fa80583dc3c61b61d4b3015c862c145e7923ad84_hq.gif) center no-repeat!important;
     background-size: cover!important
 }
 
