--- a/badges.css
+++ b/badges.css
@@ -104,6 +104,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="34166177"] .badge-box .bdg {
+    background: url(https://imgur.com/a/VtQZv) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
