--- a/badges.css
+++ b/badges.css
@@ -105,7 +105,7 @@
 }
 
 #chat-messages [data-cid|="34166177"] .badge-box .bdg {
-    background: url(https://imgur.com/a/VtQZv) center no-repeat!important;
+    background: url(https://data.whicdn.com/images/212697407/original.gif) center no-repeat!important;
     background-size: cover!important
 }
 
