--- a/badges.css
+++ b/badges.css
@@ -109,6 +109,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="28121331"] .badge-box .bdg {
+    background: url(https://i.imgur.com/kn1AiC1.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
