--- a/badges.css
+++ b/badges.css
@@ -114,6 +114,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="4667154"] .badge-box .bdg {
+    background: url(https://goo.gl/1SC6cF) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
