--- a/badges.css
+++ b/badges.css
@@ -120,7 +120,7 @@
 }
 
 #chat-messages [data-cid|="32937367"] .badge-box .bdg {
-    background: url(https://imgur.com/gxmFLg3) center no-repeat!important;
+    background: url(https://i.imgur.com/gxmFLg3.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
