--- a/badges.css
+++ b/badges.css
@@ -124,6 +124,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3791846"] .badge-box .bdg {
+    background: url(https://media.giphy.com/media/e2tSgEk1k8Baw/giphy.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
