--- a/badges.css
+++ b/badges.css
@@ -99,11 +99,6 @@
     background-size: 25px!important      
 }
 
-#chat-messages [data-cid|="23174137"] .badge-box .bdg {
-    background: url(https://pa1.narvii.com/6398/fa80583dc3c61b61d4b3015c862c145e7923ad84_hq.gif) center no-repeat!important;
-    background-size: cover!important
-}
-
 #chat-messages [data-cid|="34166177"] .badge-box .bdg {
     background: url(https://data.whicdn.com/images/212697407/original.gif) center no-repeat!important;
     background-size: cover!important
@@ -121,6 +116,11 @@
 
 #chat-messages [data-cid|="3791846"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/e2tSgEk1k8Baw/giphy.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="28121331"] .badge-box .bdg {
+    background: url(https://i.imgur.com/kn1AiC1.gif) center no-repeat!important;
     background-size: cover!important
 }
 
