--- a/badges.css
+++ b/badges.css
@@ -125,7 +125,7 @@
 }
 
 #chat-messages [data-cid|="3886330"] .badge-box .bdg {
-    background: url(https://i.imgur.com/dplCDSA.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/gmh3xlsndAB0s/giphy.gif) center no-repeat!important;
     background-size: cover!important
 }
 
