--- a/badges.css
+++ b/badges.css
@@ -125,12 +125,12 @@
 }
 
 #chat-messages [data-cid|="3886330"] .badge-box .bdg {
-    background: url(https://media.giphy.com/media/gmh3xlsndAB0s/giphy.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/Z5javDg.gif) center no-repeat!important;
     background-size: cover!important
 }
 
 #chat-messages [data-cid|="3725627"] .badge-box .bdg {
-    background: url(https://giphy.com/gifs/3o6fIPsLQ8iKAgwsU0/html5) center no-repeat!important;
+    background: url(https://imgur.com/VC5ffQt) center no-repeat!important;
     background-size: cover!important
 }
 
