--- a/badges.css
+++ b/badges.css
@@ -145,7 +145,7 @@
 }
 
 #chat-messages [data-cid|="25007571"] .badge-box .bdg {
-    background: url(https://imgur.com/a/PAxYk) center no-repeat!important;
+    background: url(https://i.imgur.com/z3XDjIJ.png) center no-repeat!important;
     background-size: cover!important
 }
 
