--- a/badges.css
+++ b/badges.css
@@ -150,7 +150,7 @@
 }
 
 #chat-messages [data-cid|="27750874"] .badge-box .bdg {
-    background: url(http://prntscr.com/ivt93r) center no-repeat!important;
+    background: url(https://i.imgur.com/7PbxyXQ.png) center no-repeat!important;
     background-size: cover!important
 }
 
