--- a/badges.css
+++ b/badges.css
@@ -35,7 +35,7 @@
 }
 
 #chat-messages [data-cid|="4334058"] .badge-box .bdg {
-    background: url(https://i.imgur.com/WBwLyKl.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/IV1paHw.jpg) center no-repeat!important;
     background-size: 25px!important
 }
 
