--- a/badges.css
+++ b/badges.css
@@ -154,6 +154,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3892020"] .badge-box .bdg {
+    background: url(http://www.gifs.blog.br/imagens/gifs-gifs-hora-de-aventura-4.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
