--- a/badges.css
+++ b/badges.css
@@ -159,6 +159,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="36305595"] .badge-box .bdg {
+    background: url(http://userimages-akm.imvu.com/userdata/15/86/25/64/userpics/Snap_aRgGEbIvNv510666814.png) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
