--- a/badges.css
+++ b/badges.css
@@ -120,7 +120,7 @@
 }
 
 #chat-messages [data-cid|="28121331"] .badge-box .bdg {
-    background: url(https://i.imgur.com/O22s2Wf.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/kn1AiC1.gif) center no-repeat!important;
     background-size: cover!important
 }
 
