--- a/badges.css
+++ b/badges.css
@@ -135,7 +135,7 @@
 }
 
 #chat-messages [data-cid|="5772436"] .badge-box .bdg {
-    background: url(https://i.pinimg.com/originals/e6/42/79/e64279689c1cc0659fb12be60975acfe.jpg) center no-repeat!important;
+    background: url(https://i.cubeupload.com/401K3j.png) center no-repeat!important;
     background-size: cover!important
 }
 
