--- a/badges.css
+++ b/badges.css
@@ -50,7 +50,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://imgur.com/KepuhOP) center no-repeat!important;
+    background: url(https://i.imgur.com/KepuhOP.gifv) center no-repeat!important;
     background-size: cover !important
 }
 
