--- a/badges.css
+++ b/badges.css
@@ -159,6 +159,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="33288706"] .badge-box .bdg {
+    background: url(http://i0.kym-cdn.com/photos/images/original/000/845/012/b96.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
