--- a/badges.css
+++ b/badges.css
@@ -160,7 +160,7 @@
 }
 
 #chat-messages [data-cid|="33288706"] .badge-box .bdg {
-    background: url(http://i0.kym-cdn.com/photos/images/original/000/845/012/b96.gif) center no-repeat!important;
+    background: url(http://geekafrica.net/wp-content/uploads/2015/10/WataMote-2-750x400.png) center no-repeat!important;
     background-size: cover!important
 }
 
