--- a/badges.css
+++ b/badges.css
@@ -160,7 +160,12 @@
 }
 
 #chat-messages [data-cid|="33288706"] .badge-box .bdg {
-    background: url(http://geekafrica.net/wp-content/uploads/2015/10/WataMote-2-750x400.png) center no-repeat!important;
+    background: url(https://i.imgur.com/EbD8Ub7.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="35712817"] .badge-box .bdg {
+    background: url(https://i.imgur.com/q0lzUP6.gif) center no-repeat!important;
     background-size: cover!important
 }
 
