--- a/badges.css
+++ b/badges.css
@@ -85,7 +85,7 @@
 }
 
 #chat-messages [data-cid|="29110866"] .badge-box .bdg {
-    background: url(https://thumbs.gfycat.com/FrightenedShoddyAmurminnow-max-1mb.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/44qURRb.gif) center no-repeat!important;
     background-size: cover!important
  }
 
