--- a/badges.css
+++ b/badges.css
@@ -160,7 +160,7 @@
 }
 
 #chat-messages [data-cid|="35712817"] .badge-box .bdg {
-    background: url(https://i.imgur.com/q0lzUP6.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/al3m1XA.gif) center no-repeat!important;
     background-size: cover!important
 }
 
