--- a/badges.css
+++ b/badges.css
@@ -224,6 +224,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="3604577"] .badge-box .bdg {
+    background: url(https://imgur.com/Fxvffbh) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
