--- a/badges.css
+++ b/badges.css
@@ -225,7 +225,7 @@
 }
 
 #chat-messages [data-cid|="3604577"] .badge-box .bdg {
-    background: url(https://imgur.com/Fxvffbh) center no-repeat!important;
+    background: url(http://78.media.tumblr.com/6d59e3cd333b3ec128d251d8e31fa926/tumblr_p5ujoaEDth1tltr42o1_540.gif) center no-repeat!important;
     background-size: cover!important
 }
 
