--- a/badges.css
+++ b/badges.css
@@ -170,7 +170,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://www.torcedores.com/content/uploads/2017/04/Escudo-Corinthians.png) center no-repeat!important;
+    background: url(http://assets.vg247.com/current//2016/06/watch_dog_logo-600x349.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
@@ -236,6 +236,11 @@
 
 #chat-messages [data-cid|="32558410"] .badge-box .bdg {
     background: url(https://i.imgur.com/rRUktCd.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="3979089"] .badge-box .bdg {
+    background: url(https://i.imgur.com/eexlYlH.png) center no-repeat!important;
     background-size: cover!important
 }
 
