--- a/badges.css
+++ b/badges.css
@@ -230,7 +230,7 @@
 }
 
 #chat-messages [data-cid|="37130971"] .badge-box .bdg {
-    background: url(https://i.imgur.com/nGdUcCM.gif) center no-repeat!important;
+    background: url(https://i.imgur.com/HoYp1cA.gif) center no-repeat!important;
     background-size: cover!important
 }
 
