--- a/badges.css
+++ b/badges.css
@@ -60,7 +60,7 @@
 }
 
 #chat-messages [data-cid|="16760700"] .badge-box .bdg {
-    background: url(https://i.imgur.com/KSKhTui.jpg) center no-repeat!important;
+    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQV59RPL5V2h0Y8TwwYSRF8x3p7z5gj4h_81uQ5O-QSGxnQTW3zSA) center no-repeat!important;
     background-size: cover!important
 }
 
@@ -170,7 +170,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(http://assets.vg247.com/current//2016/06/watch_dog_logo-600x349.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/Ben9dW8.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
