--- a/badges.css
+++ b/badges.css
@@ -244,6 +244,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="6035487"] .badge-box .bdg {
+    background: url(https://i.pinimg.com/originals/44/29/53/442953501c3bdc8d568cb5f86659519b.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
