--- a/badges.css
+++ b/badges.css
@@ -254,6 +254,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="37080211"] .badge-box .bdg {
+    background: url(https://i.imgur.com/v6RoR5M.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
