--- a/badges.css
+++ b/badges.css
@@ -65,7 +65,7 @@
 }
 
 #chat-messages [data-cid|="4433114"] .badge-box .bdg {
-    background: url(http://gifimage.net/wp-content/uploads/2017/07/gif-memes-4.gif) center no-repeat!important;
+    background: url(https://techcrunch.com/wp-content/uploads/2015/08/safe_image.gif) center no-repeat!important;
     background-size: cover!important
 }
 
