--- a/badges.css
+++ b/badges.css
@@ -259,6 +259,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="17026954"] .badge-box .bdg {
+    background: url(https://i.imgur.com/KYEHx0N.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
