--- a/style.css
+++ b/style.css
@@ -9,302 +9,4 @@ Editado com amor pelo TheMars, Desenvolvedor da Marsencrypt.
 Vá para Marte em: https://marsencrypt.tk.
 */
 
-@import url(https://rawgit.com/electrobrasil/EB/master/chatelements.css);
-@import url(https://rawgit.com/electrobrasil/EB/master/badges.css);
-
-#dj-button,#dj-button.is-full .left,#dj-button.is-leave .left,#dj-button.is-locked .left,#dj-button.is-quit .left,#dj-button.is-wait .left {
-    border-radius: 8px
-}
-
-#room-bar .icon-room {
-    background: url(https://i.imgur.com/Q8leNK0.png);
-    width: 31px;
-    height: 31px
-}
-
-#user-lists .list.staff .group {
-    background: linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,1) 100%)!important
-}
-
-#footer {
-    box-shadow: inset 0 0 6px 0 #0A0A0A;
-    -webkit-box-shadow: inset 0 0 6px 0 #0A0A0A;
-    -moz-box-shadow: inset 0 0 6px 0 #0A0A0A
-}
-
-#footer-user .buttons .button {
-    box-shadow: inset 1px 0 0 #0A0A0A;
-    -webkit-box-shadow: inset 1px 0 0 #0A0A0A;
-    -moz-box-shadow: inset 1px 0 0 #0A0A0A
-}
-
-#playlist-button {
-    background: linear-gradient(to top,#423930 0,#b4a586 100%);
-    box-shadow: inset 0 0 1px 0 #0A0A0A;
-}
-
-#app-header {
-    background: linear-gradient(to bottom,rgba(255,255,255,.25) 0,rgba(0,0,0,.75) 100%)
-}
-
-#audience-canvas {
-    top: -30px !important;
-}
-
-#playback .background img {
-    display:  none;
-}
-
-#playback .background:before {
-    content: '';
-    background: url("https://i.imgur.com/q8Wnw9L.png") center no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
-#store-button {
-    background: linear-gradient(to bottom,red 0,#A00000 100%)
-}
-
-#plug-dj {
-    background: linear-gradient(to bottom,#0268AC 0,#02225C 100%)
-}
-
-.header-panel-button.selected {
-    background: linear-gradient(to top,#423930 0,#b4a586 100%);
-}
-
-#plug-menu {
-    background: rgba(40,44,53,.94)!important
-}
-
-#plug-menu .legal {
-    background: rgba(68,74,89,.46)!important
-}
-
-#settings {
-    background: rgba(10,10,10,.89)!important
-}
-
-#user-lists .list .user:hover {
-    background: linear-gradient(to right,rgba(255,118,118,0) 0,rgba(255,0,194,.27) 100%)!important
-}
-
-#waitlist .list .user {
-    background: linear-gradient(to right,rgba(255,118,118,0) 0,rgba(255,0,194,.13) 100%)!important
-}
-
-.app-right .friends {
-    background: 0 0!important
-}
-
-#settings .header {
-    background: rgba(28,31,37,.78)!important
-}
-
-@media (max-width: 1600px) {
-    #room .app-right {
-        background:linear-gradient(to right,rgba(0,0,0,.7) 0,rgba(0,0,0,1) 100%)
-    }
-}
-
-#chat .emote:nth-child(2n+1),#chat .mention:nth-child(2n+1),#chat .message:nth-child(2n+1),#chat .moderation:nth-child(2n+1),#chat .skip:nth-child(2n+1),#chat .update:nth-child(2n+1),#chat .welcome:nth-child(2n+1) {
-    background-color: rgba(17,19,23,.32);
-    -webkit-animation: fadeIn .25s ease;
-    -moz-animation: fadeIn .25s ease;
-    -ms-animation: fadeIn .25s ease;
-    -o-animation: fadeIn .25s ease;
-    animation: fadeIn .25s ease
-}
-
-#chat .emote,#chat .mention,#chat .message,#chat .moderation,#chat .skip,#chat .system,#chat .update,#chat .welcome {
-    -webkit-animation: fadeIn .25s ease;
-    -moz-animation: fadeIn .25s ease;
-    -ms-animation: fadeIn .25s ease;
-    -o-animation: fadeIn .25s ease;
-    animation: fadeIn .25s ease
-}
-
-#chat .mention {
-    font-weight: 700;
-    border-left: #7681FF 3px solid
-}
-
-#chat .emote .from {
-    color: #ac76ff!important
-}
-
-#chat .emote {
-    border-left: rgba(174,69,189,1) 3px solid!important;
-    background-color: rgba(76,93,119,.22)!important
-}
-
-#chat .emote .text {
-    font-style: normal;
-    font-weight: 700;
-    color: #ac76ff
-}
-
-#footer {
-    background: linear-gradient(to bottom,rgba(0,0,0,.25) 0,rgba(0,0,0,.75) 100%)
-}
-
-.social-menu .icon-facebook,.social-menu .icon-twitter {
-    opacity: 1
-}
-
-#playlist-panel {
-    background: rgba(17,19,23,.9)
-}
-
-#playlist-menu {
-    background: rgba(28,31,37,.67)
-}
-
-#search {
-    background: rgba(50,55,66,.58)
-}
-
-#filter-bar,#search-bar {
-    background: rgba(17,19,23,.77)
-}
-
-#playlist-edit-button {
-    background: rgba(85,93,112,.75)
-}
-
-#playlist-shuffle-button {
-    background: rgba(68,74,89,.75)
-}
-
-#playlist-delete-button {
-    background: rgba(50,55,66,.75)
-}
-
-#user-panel .score {
-    background: rgba(28,31,37,.59)
-}
-
-#dj-button,#dj-button.is-full .left,#dj-button.is-locked .left,#vote .crowd-response,#vote .crowd-response.disabled .bottom {
-    background: #222224
-}
-
-#woot .bottom,#woot.selected {
-    background: #90ad2f
-}
-
-#grab .bottom,#grab.selected {
-    background: #aa74ff
-}
-
-#meh .bottom,#meh.selected {
-    background: #c42e3b
-}
-
-#chat .mention .msg {
-    background: linear-gradient(to right,rgba(255,118,118,0) 0,rgba(41,48,124,.27) 100%)
-}
-
-#user-lists .list.room .user .icon-meh {
-    top: -1px!important;
-    right: 8px!important;
-    left: auto!important
-}
-
-#user-lists .list.room .user .icon-grab {
-    right: 35px
-}
-
-#history-button {
-    background: 0 0
-}
-
-.in-room {
-    background: 0 0!important
-}
-
-.in-room.open {
-    background: #282c35!important
-}
-
-.dark-label {
-    color: #a0a0a0!important
-}
-
-.app-header {
-    background: linear-gradient(to bottom,rgba(0,0,0,.68) 0,rgba(0,0,0,.78) 100%)!important
-}
-
-#dj-button .left:hover {
-    animation: pulse .5s ease
-}
-
-#footer-user .buttons .button.settings:hover .icon {
-    -moz-transform: rotate(360deg)!important;
-    -webkit-transform: rotate(360deg)!important;
-    transform: rotate(360deg)!important
-}
-
-#footer-user .buttons .button.settings .icon {
-    -moz-transition: transform 1s ease-in-out;
-    -webkit-transition: transform 1s ease-in-out;
-    -o-transition: transform 1s ease-in-out;
-    transition: transform 1s ease-in-out
-}
-
-#user-menu .avatar {
-    background: url(https://i.imgur.com/t73rJ7o.jpg) no-repeat!important;
-    background-size: cover!important
-}
-
-#user-menu .item.selected {
-    background: linear-gradient(to top,#0d3944 0,#4a928a 100%)!important
-}
-
-.tab-menu button.selected {
-    background: linear-gradient(to top,#115161 0,#4ba299 100%);
-    transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease
-}
-
-.progress {
-    background: linear-gradient(to top,#407d76 0,#4a928a 100%)!important
-}
-
-.row {
-    transition: all .4s ease
-}
-
-.row:hover {
-    background: linear-gradient(to right,rgba(255,118,118,0) 0,rgb(83, 80, 65) 100%)!important;
-}
-
-#playlist-menu .menu .row.selected {
-    background: rgb(105, 94, 77);
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0
-    }
-
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes pulse {
-    from,to {
-        -webkit-transform: scale3d(1,1,1);
-        transform: scale3d(1,1,1)
-    }
-
-    50% {
-        -webkit-transform: scale3d(1.05,1.05,1.05);
-        transform: scale3d(1.1,1.1,1.1)
-    }
-}
+@import url(https://rawgit.com/electrobrasil/EB/master/chatelements.css);@import url(https://rawgit.com/electrobrasil/EB/master/badges.css);.nav-left__item.selected,.nav-left__item:hover,.user-profile-dropdown__item:hover{transform:translateX(2px)}#user-menu .item,.nav-left__item,.user-profile-dropdown__item{transition:all .12s ease}.community .community__name{color:#fff}.community .room-controls--desktop{border:none;border-radius:5px;background:#2d2d2d;width:auto}.community .room-controls--desktop__item{margin:0 17px!important}.community .room-controls--desktop__item .btn-like.clicked{color:#90ad2f!important}.community .room-controls--desktop__item .btn-meh.clicked{color:#c42e3b}.nav-left{background:#000}.nav-left__item:hover{background:linear-gradient(to right,rgba(255,118,118,0) 0,rgba(70,70,70,.5) 100%)!important}.nav-left__item.selected:hover{background:#1b1b1b!important}.nav-left__item.selected .nav-left__item-icon,.nav-left__item.selected .nav-left__item-text{color:#fff}.nav-left__item.selected{border-color:#fff;background:#1b1b1b}.btn-no-dj-primary.btn-no-dj-secondary__bottom,.btn-no-dj-secondary.btn-no-dj-secondary__bottom{background:#2d2d2d;padding:10px 20px;border-radius:5px;cursor:pointer}.btn-no-dj-primary.btn-no-dj-secondary__bottom:hover,.btn-no-dj-secondary.btn-no-dj-secondary__bottom:hover{background:#505050}.btn-no-dj-primary.btn-no-dj-secondary__bottom .room-controls__bottom-text,.btn-no-dj-secondary.btn-no-dj-secondary__bottom .room-controls__bottom-text{font-size:15px;font-family:Roboto,sans-serif!important;font-weight:500;margin-bottom:5px}#rs-eta{position:relative;bottom:-5px;font-size:13px!important}.btn-no-dj-secondary__icon{width:29px!important}#user-menu .item.selected,#user-menu .item.selected>span{background:0 0!important;color:#fff!important}#user-menu .item:hover{transform:translateX(3px)}#user-menu .item:hover>span{color:#fff!important}
