--- a/badges.css
+++ b/badges.css
@@ -264,6 +264,11 @@
     background-size: cover!important
 }
 
+#chat-messages [data-cid|="4075038"] .badge-box .bdg {
+    background: url(https://s1.gifyu.com/images/jTI0HtH.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
 /* Rollover */
 #user-rollover[data-id|="3485598"] .meta .thumb .avi,
 #user-rollover.id-348559 .meta .thumb i {
