--- a/badges.css
+++ b/badges.css
@@ -50,7 +50,7 @@
 }
 
 #chat-messages [data-cid|="24791065"] .badge-box .bdg {
-    background: url(https://media.giphy.com/media/3o84U7EsQ2BkyNXVUk/giphy.gif) center no-repeat!important;
+    background: url(https://media.giphy.com/media/121Ve4tjzKoQda/giphy.gif) center no-repeat!important;
     background-size: cover !important
 }
 
@@ -266,6 +266,16 @@
 
 #chat-messages [data-cid|="4075038"] .badge-box .bdg {
     background: url(https://s1.gifyu.com/images/jTI0HtH.gif) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="37654302"] .badge-box .bdg {
+    background: url(https://i.imgur.com/TJpTCRu.jpg) center no-repeat!important;
+    background-size: cover!important
+}
+
+#chat-messages [data-cid|="3968976"] .badge-box .bdg {
+    background: url(https://media.giphy.com/media/26xBEez1vnVb2WgBq/giphy.gif) center no-repeat!important;
     background-size: cover!important
 }
 
