--- a/badges.css
+++ b/badges.css
@@ -65,7 +65,7 @@
 
 #chat-messages [data-cid|="16719045"] .badge-box .bdg {
     background: url(https://media.giphy.com/media/UvRwJhgfbjVi8/giphy.gif)!important;
-    background-size: cover!important
+    background-size: 45px!important
 }
 
 #chat-messages [data-cid|="4558687"] .badge-box .bdg {
