--- a/badges.css
+++ b/badges.css
@@ -95,7 +95,7 @@
 }
 
 #chat-messages [data-cid|="4334058"] .badge-box .bdg {
-    background: url(https://i.imgur.com/IV1paHw.jpg) center no-repeat!important;
+    background: url(https://imgur.com/vTERO93) center no-repeat!important;
     background-size: 25px!important
 }
 
@@ -230,7 +230,7 @@
 }
 
 #chat-messages [data-cid|="3469337"] .badge-box .bdg {
-    background: url(https://i.imgur.com/Ben9dW8.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/NvT0QMG.gif) center no-repeat!important;
     background-size: cover!important
 }
 
