--- a/badges.css
+++ b/badges.css
@@ -95,7 +95,7 @@
 }
 
 #chat-messages [data-cid|="4334058"] .badge-box .bdg {
-    background: url(https://imgur.com/vTERO93) center no-repeat!important;
+    background: url(https://imgur.com/fJfsUIH) center no-repeat!important;
     background-size: 25px!important
 }
 
