--- a/badges.css
+++ b/badges.css
@@ -345,7 +345,7 @@
 }
 
 #chat-messages [data-cid|="3610793"] .badge-box .bdg {
-    background: url(https://i.imgur.com/oj8wGxH.jpg) center no-repeat!important;
+    background: url(https://i.imgur.com/oFAnr6s.jpg) center no-repeat!important;
     background-size: cover!important
 }
 
